add contact & update background color

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- HEADER -->
+    <!-------------------------- HEADER -------------------------->
     <nav>
         <div class="logo">
             <h3>ED</h3>
         </div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
             <li><a href="#service">Service</a></li>
             <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
 
         <div class="menu-toggle">
@@ -27,8 +27,10 @@
             <span></span>
         </div>
     </nav>
+    <!------------------- PENUTUP HEADER -------------------------->
+    
 
-    <!-- ARTICLE -->
+    <!-------------------------- PROFILE -------------------------->
     <article>
         <div class="profile-wrapper">
             <h2>Profile Title</h2>
@@ -38,7 +40,9 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla maiores quaerat placeat aperiam obcaecati, quod minus perspiciatis nesciunt repudiandae beatae sequi? Qui omnis sunt mollitia totam molestiae aliquam quis ducimus.</p>
         </div>
     </article>
+    <!-------------------------- PENUTUP PROFILE -------------------------->
 
+    <!-------------------------- SERVICE -------------------------->
     <div class="service-container" id="service">
         <h2>Services</h2>
         <div class="service-wrapper">
@@ -56,7 +60,9 @@
             </div>
         </div>
     </div>
+    <!-------------------------- PENUTUP SERVICE -------------------------->
 
+    <!-------------------------- GALLERY -------------------------->
     <div class="gallery-container" id="gallery">
         <h2>Gallery</h2>
         <div class="gallery-wrapper">
@@ -75,6 +81,30 @@
             <img src="aset/vector-13.jpg" alt="vector-img" class="vector-img">
             <img src="aset/vector-14.jpg" alt="vector-img" class="vector-img">
             <img src="aset/vector-15.jpg" alt="vector-img" class="vector-img">
+        </div>
+    </div>
+    <!-------------------------- GALLERY CONTAINER -------------------------->
+
+    <div class="contact-container" id="contact">
+        <h2>Contact</h2>
+        <div class="contact-wrapper">
+            <img src="aset/whatsapp.png" alt="" class="contact-img">
+            <div class="contact-info">
+                <address>Nama    : Sinklaus Patrezki Dae</address>
+                <address>No Hp   : 082141353483</address>
+                <address>Alamat  : Jl. Eltari Mbay</address>
+            </div>
+            <div class="social-media">
+                <a href="">
+                    <img src="aset/social-network.png" alt="" class="sosmed-img">
+                </a>
+                <a href="">
+                    <img src="aset/youtube.png" alt="" class="sosmed-img">
+                </a>
+                <a href="">
+                    <img src="aset/instagram.png" alt="" class="sosmed-img">
+                </a>
+            </div>
         </div>
     </div>
 
